<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/Favori"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_name" />

        <EditText
            android:id="@+id/ad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" >
            <requestFocus />
        </EditText>
    </TableRow>
    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <CheckBox
            android:id="@+id/Favori"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Favori" />
    </TableRow>
    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/sureLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_price" />
        <EditText
            android:id="@+id/sure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/turLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_type" />
        <Spinner
            android:id="@+id/tur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>
    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/yonetmenLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_amount" />
        <Spinner
            android:id="@+id/yonetmen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/yonetmen2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>
    <Button
        android:id="@+id/degisiklikleriKaydet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/degisiklikleriKaydet" />
    <Button
        android:id="@+id/sil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sil" />
    <Button
        android:id="@+id/geriDon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/geriDon" />
</TableLayout>