<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/Favori"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_name" />

        <EditText
            android:id="@+id/ekleAd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text">

            <requestFocus />
        </EditText>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <CheckBox
            android:id="@+id/Favori"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Favori" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/yilLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_price" />
        <EditText
            android:id="@+id/ekleYil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal" />
    </TableRow>
    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/turLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_type" />
        <Spinner
            android:id="@+id/ekleTur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>
    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/urun_miktari"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_amount" />

        <Spinner
            android:id="@+id/ekleYonetmen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/ekleYonetmen2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>

    <Button
        android:id="@+id/ekle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add" />
</TableLayout>